[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gradpose"
version = "0.0.1"
authors = [
  { name="Daniel Rademaker", email="author@example.com" },
  { name="Kevin van Geemen", email="kevinvg207business@gmail.com" }
]
description = "Protein Structural Superposition Tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    'numpy',
    'torch',
    'tqdm'
]

[project.scripts]
gradpose = "gradpose:main"

[project.urls]
"Homepage" = "https://github.com/X-lab-3D/fast-superimposition"
"Bug Tracker" = "https://github.com/X-lab-3D/fast-superimposition/issues"