[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gradpose"
version = "0.2"
authors = [
  { name="Daniel Rademaker", email="dtrademaker@gmail.com" },
  { name="Kevin van Geemen", email="kevinvg207business@gmail.com" }
]
description = "GradPose is a novel structural superimposition command-line tool and Python package for PDB files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    'numpy',
    'torch',
    'tqdm'
]

[project.scripts]
gradpose = "gradpose:main"

[project.urls]
"Homepage" = "https://github.com/X-lab-3D/GradPose"
"Bug Tracker" = "https://github.com/X-lab-3D/GradPose/issues"